<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <fragment
        android:name="com.authpro.imageauthentication.InputFragment"
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/enter"
        android:onClick="enter"/>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/clear"
        android:onClick="clear"/>

    <TextView
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:onClick="refresh"
        android:text="@string/refresh"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
</LinearLayout>
