<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/instruction"
        android:text="@string/enter_new_password"/>

    <fragment
        android:name="com.authpro.imageauthentication.InputFragment"
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:text="@string/clear"
            android:onClick="clear"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/enterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter"
            android:onClick="enter"/>
    </LinearLayout>
</LinearLayout>
