<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:name="com.authpro.imageauthentication.InputFragment"
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:onClick="enter"/>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:onClick="clear"/>

        <TextView
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="14sp"
            android:clickable="true"
            android:onClick="refresh"
            android:text="@string/refresh"/>
    </LinearLayout>
</LinearLayout>
